codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__usage_limit_reset_picker_default_cancel.snap
---
source: tui/src/chatwidget/tests/usage_limit_reset_tests.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 90))"
---
  Usage limit resets
  Choose one of 1 exact usage limit reset.

  1. Banked reset      Earned reset credit. Expires in 3d 4h.
› 2. Cancel (default) (n)

  Enter selects; Left or Esc goes back
